Sutter Health/src/objects/SHP_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Spoke with Member</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>No phone #</fullName>
                </value>
                <value>
                    <fullName>3rd attempt unable to contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Attempt__c</fullName>
        <formula>if(CreatedDate = Identify_Member__r.First_Call_Date__c , 1, if(CreatedDate = Identify_Member__r.Second_Call_Date__c , 2, if(CreatedDate =   Identify_Member__r.Third_Call_Date__c , 3, if(CreatedDate = Identify_Member__r.Fourth_Call_Date__c , 4,0))))</formula>
        <label>Call Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Back_time_PST__c</fullName>
        <label>Call Back time (PST)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <label>Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Follow-Up Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <formula>Identify_Member__r.Days_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Call__c</fullName>
        <label>Follow Up Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identify_Member__c</fullName>
        <label>Identify Member</label>
        <referenceTo>Identify_Member__c</referenceTo>
        <relationshipLabel>SHP Follow-Up</relationshipLabel>
        <relationshipName>SHP_Follow_Up</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SHP Follow-Up</label>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Activity__c</columns>
        <columns>Call_Outcome__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
    </listViews>
    <nameField>
        <displayFormat>FollowUp-{000000000}</displayFormat>
        <label>SHP Follow Up</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SHP Follow-Up</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>